opam-version: "1.2"

version: "dev"

maintainer: "dev@ocsigen.org"
author: "The ocsigen team"
homepage: "https://ocsigen.org/tyxml/"
bug-reports: "https://github.com/ocsigen/tyxml/issues"
doc: "https://ocsigen.org/tyxml/manual/"
dev-repo: "https://github.com/ocsigen/tyxml.git"

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "dune" {build & >= "1.0"}
  "tyxml"
  "fmt"
]
available: ocaml-version >= "4.03"
