opam-version: "2.0"
version: "dev"
maintainer: "dev@ocsigen.org"
author: "The ocsigen team"
homepage: "https://github.com/ocsigen/tyxml/"
bug-reports: "https://github.com/ocsigen/tyxml/issues"
doc: "https://ocsigen.org/tyxml/manual/"
dev-repo: "git+https://github.com/ocsigen/tyxml.git"
license: "LGPL-2.1 with OCaml linking exception"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.02"}
  "dune" {build}
  "alcotest" {with-test}
  "tyxml"
  "tyxml-ppx"
  "markup" {>= "0.7.2"}
  "ppx_tools_versioned"
  "reason" {with-test}
]

synopsis:"PPX that allows to write TyXML documents with the JSX syntax"
description:"""

The TyXML PPX is compatible with all TyXML instance, from textual trees
to reactive virtual DOM trees.
"""
