opam-version: "1.2"

version: "dev"

maintainer: "dev@ocsigen.org"
author: "The ocsigen team"
homepage: "https://ocsigen.org/tyxml/"
bug-reports: "https://github.com/ocsigen/tyxml/issues"
doc: "https://ocsigen.org/tyxml/manual/"
dev-repo: "https://github.com/ocsigen/tyxml.git"

build: [
  ["dune" "build" "-p" name "-j" jobs "@install"]
  ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "dune" {build}
  "tyxml"
  "markup" {>= "0.7.2"}
  "ppx_tools_versioned"
  "alcotest" {test}
]
available: ocaml-version >= "4.02"
