opam-version: "2.0"
version: "dev"
maintainer: "dev@ocsigen.org"
author: "The ocsigen team"
homepage: "https://ocsigen.org/tyxml/"
bug-reports: "https://github.com/ocsigen/tyxml/issues"
doc: "https://ocsigen.org/tyxml/manual/"
dev-repo: "git+https://github.com/ocsigen/tyxml.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.02"}
  "dune" {build}
  "alcotest" {test}
  "seq"
  "uutf" {>= "1.0.0"}
  "re" {>= "1.5.0"}
]
