(library
 (name tyxml_jsx)
 (public_name tyxml-jsx.internal)
 (libraries ppx_tools_versioned
            tyxml.syntax
 )
 (preprocess (pps ppx_tools_versioned.metaquot_405))
 (flags (:standard
         -safe-string
         -open Migrate_parsetree
         -open Ast_405
         -open Ppx_tools_405
         -w "-9"
 ))
)
