(library
 (name tyxml_jsx)
 (public_name tyxml-jsx)
 (libraries ppx_tools_versioned
            tyxml-syntax
 )
 (kind ppx_rewriter)
 (preprocess (pps ppx_tools_versioned.metaquot_405))
 (flags (:standard
         -safe-string
         -open Migrate_parsetree
         -open Ast_405
         -open Ppx_tools_405
         -w "-9"
 ))
)
