(library
 (name tyxml_ppx)
 (public_name tyxml-ppx.internal)
 (libraries re.str
            ppx_tools_versioned
            markup
            tyxml.syntax
 )
 (preprocess (pps ppx_tools_versioned.metaquot_405))
 (flags (:standard
         -safe-string
         -open Migrate_parsetree
         -open Ast_405
         -open Ppx_tools_405
         -w "-9"
 ))
)
